--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "combined-stream2": "^1.1.2",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
+    "cron": "^1.8.2",
     "cross-fetch": "^3.1.4",
     "crypto-js": "^4.1.1",
     "css-loader": "^6.2.0",
@@ -75,6 +76,7 @@
     "juice": "^8.0.0",
     "jwks-rsa": "^2.0.4",
     "lodash": "^4.17.21",
+    "mailchimp-api-v3": "^1.15.0",
     "marked": "^2.1.3",
     "meteor-node-stubs": "^1.1.0",
     "mingo": "^4.1.4",
