open survey; Add link to previous results

--- a/packages/stateofjs/lib/surveys/yml/js2020outline.yml
+++ b/packages/stateofjs/lib/surveys/yml/js2020outline.yml
@@ -14,7 +14,7 @@ createdAt: December 1, 2020
 prettySlug: state-of-js
 hashtag: StateOfJS
 shareUrl: https://stateofjs.com
-# resultsUrl: https://2019.stateofjs.com/
+resultsUrl: https://2020.stateofjs.com/
 name: 'State of JavaScript'
 year: 2020
 status: 3 # closed
