--- a/packages/stateofjs/lib/surveys/yml/css2021outline.yml
+++ b/packages/stateofjs/lib/surveys/yml/css2021outline.yml
@@ -13,9 +13,10 @@ createdAt: October 30, 2020
 prettySlug: state-of-css
 hashtag: StateOfCSS
 shareUrl: https://stateofcss.com
+# resultsUrl: https://2021.stateofcss.com/
 name: 'State of CSS'
 year: 2021
-status: 1
+status: 2 # preview/open/closed
 imageUrl: 'stateofcss2021.png'
 bgColor: '#232840'
 textColor: '#9ac6c9'
