--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ dump/*
 
 production.settings.json
 settings-production.json
+settings-production-jobs.json
 settings.json
 settings.json.not-used
 .idea
