increase link contrast for 2021 css survey and selection contrast

--- a/packages/stateofjs/lib/surveys/yml/css2021outline.yml
+++ b/packages/stateofjs/lib/surveys/yml/css2021outline.yml
@@ -20,7 +20,7 @@ status: 2 # preview/open/closed
 imageUrl: 'stateofcss2021.png'
 bgColor: '#232840'
 textColor: '#9ac6c9'
-linkColor: '#f649a7'
+linkColor: '#F95DB2'
 hoverColor: '#59df7f'
 credits:
   - id: sarah_fossheim
