--- a/packages/stateofjs/lib/surveys/yml/css2021outline.yml
+++ b/packages/stateofjs/lib/surveys/yml/css2021outline.yml
@@ -476,7 +476,7 @@ outline:
 
       - id: browser_interoperability_features
         year: 2021
-        template: longtext
+        template: others
 
       - id: css_pain_points
         year: 2021
