more field renaming (css2021__opinions_other__browser_interoperability_features__others)

--- a/packages/stateofjs/lib/surveys/yml/css2021outline.yml
+++ b/packages/stateofjs/lib/surveys/yml/css2021outline.yml
@@ -476,6 +476,7 @@ outline:
 
       - id: browser_interoperability_features
         year: 2021
+        sectionSlug: opinions_other
         template: others
 
       - id: css_pain_points
