load locales lists dynamically; add missing locales; split out graphql.js code into locales.js

--- a/packages/stateofjs/lib/surveys/yml/css2021outline.yml
+++ b/packages/stateofjs/lib/surveys/yml/css2021outline.yml
@@ -478,7 +478,7 @@ outline:
         year: 2021
         sectionSlug: opinions_others
         template: others
-        matchTags: [features, browser_interoperability]
+        matchTags: [features, browser_interoperability, css_pain_points]
 
       - id: css_pain_points
         year: 2021
