--- a/packages/stateofjs/lib/surveys/yml/css2021outline.yml
+++ b/packages/stateofjs/lib/surveys/yml/css2021outline.yml
@@ -16,7 +16,7 @@ shareUrl: https://stateofcss.com
 # resultsUrl: https://2021.stateofcss.com/
 name: 'State of CSS'
 year: 2021
-status: 2 # preview/open/closed
+status: 3 # preview/open/closed
 imageUrl: 'stateofcss2021.png'
 bgColor: '#232840'
 textColor: '#9ac6c9'
@@ -478,7 +478,7 @@ outline:
         year: 2021
         sectionSlug: opinions_others
         template: others
-        matchTags: [features, browser_interoperability, css_pain_points]
+        matchTags: [features, browser_interoperability, css_missing_features, css_pain_points]
 
       - id: css_pain_points
         year: 2021
